# lifeos

./: .env.example  .gitignore  DEVELOPMENT.md  FORENSIC_AUDIT_REPORT.md  LICENSE  README.md  adb-pendo.sh  adb-samsung.sh  build-android.sh  capacitor.config.ts  electron-launch.sh  index.html  package-lock.json  package.json  playwright.config.ts  setup-pendo-hotspot.sh  start-jetson-electron.sh  start-jetson.sh  tsconfig.app.json  vercel.json  vite.config.ts
.github/workflows/: build-android.yml  deploy-webapp.yml
.hermes/: claude-code-audit-prompt.md  electron-audit-2026-04-22.md  improvement-checklist.md  phase3-self-healing-audit.md  re-audit-findings.md
.hermes/plans/: 2026-04-20_PERPETUAL-LifeOS-IMPROVEMENT.md
android/: gradle.properties
android/app/: build.gradle
backend/: app.py  serve.py
backend/api/: __init__.py  (+3 more)
e2e/: auth.setup.ts  dashboard.spec.ts  finances.spec.ts  goals.spec.ts  habits.spec.ts  health.spec.ts  journal.spec.ts  login.spec.ts  navigation.spec.ts  schedule.spec.ts
electron/: database.js  main.js  preload.cjs  preload.js  rebuild.js  schema.sql  steam.js
playwright-report/: index.html
public/: .htaccess  manifest.json  offline.html  privacy.html  robots.txt  sitemap.xml  sw.js  terms.html
scripts/: fix-legacy-bundle.mjs
sql/: 003_finance_schema.sql  006_user_profiles.sql  007_auto_create_user.sql  rpg-tables.sql
src/: App.css  App.tsx  electron.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
supabase/: config.toml
(+1182 files in other folders)
